# advent-of-code-2020-rust

./: Cargo.toml  README.md
check/: Cargo.toml
day01/: Cargo.toml
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/: Cargo.toml
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/: Cargo.toml
day09/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/: Cargo.toml  notes.txt
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: main.rs
day18/: Cargo.toml  README.md
day18/src/: main.rs  part1.rs  part2.rs
day19/: Cargo.toml  example-input-part2-all-should-match.txt  example-input-part2-fail-should-match.txt  example-rules-part2-b.txt  notes.txt  rules-part2.txt
day19/src/: main.rs
day20/: Cargo.toml
day20/src/: main.rs
day21/: Cargo.toml
day21/src/: main.rs  parse.rs
day22/: Cargo.toml
day22/src/: deck.rs  lib.rs  main.rs  parser.rs  part1.rs  part2.rs
day23/: Cargo.toml
day23/src/: game.rs  main.rs  part1.rs  part2.rs
day24/: Cargo.toml
day24/src/: lib.rs  main.rs  parser.rs
day25/: Cargo.toml
day25/src/: main.rs
