[package]
name = "day13"
version = "0.1.0"
authors = ["Michael Barber <60610888+mike-barber@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"             # lowest common multiplier
itertools = "0.10"      # iterate function
