[package]
name = "day20"
version = "0.1.0"
authors = ["Michael Barber <60610888+mike-barber@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14"
eyre = "0.6"
itertools = "0.10"
